# ethos-n-driver-stack

./: .gitignore  Android.bp  CHANGELOG.md  README.md  SECURITY.md  SUPPORTED.md  setup_android.sh
armnn-ethos-n-backend/: CMakeLists.txt  EthosNBackend.cpp  EthosNBackend.hpp  EthosNBackendId.hpp  EthosNBackendProfilingContext.cpp  EthosNBackendProfilingContext.hpp  EthosNBackendUtils.hpp  EthosNCaching.cpp  EthosNCaching.hpp  EthosNConfig.cpp  EthosNConfig.hpp  EthosNLayerSupport.cpp  EthosNLayerSupport.hpp  EthosNMapping.cpp  EthosNMapping.hpp  EthosNReplaceUnsupported.cpp  EthosNReplaceUnsupported.hpp  EthosNSubgraphViewConverter.cpp  EthosNSubgraphViewConverter.hpp  EthosNTensorHandle.hpp  EthosNTensorHandleFactory.cpp  EthosNTensorHandleFactory.hpp  EthosNTensorUtils.cpp  EthosNTensorUtils.hpp  EthosNWorkloadFactory.cpp  EthosNWorkloadFactory.hpp  EthosNWorkloadUtils.hpp  EthosNWorkloads.hpp  LICENSE  backend.cmake  backend.mk  mapping.txt
armnn-ethos-n-backend/test/: CMakeLists.txt  EthosNBackendTests.cpp  EthosNCachingTests.cpp  EthosNCreateEstimationWorkloadTests.cpp  EthosNCreateWorkloadTests.cpp  EthosNLayerTests.cpp  EthosNLayerTests.hpp  EthosNMappingTests.cpp  EthosNMemCopyTests.cpp  EthosNOptimizeSubgraphViewTests.cpp  EthosNPreCompiledVGG16Quant-Armnn.cpp  EthosNProfilingTests.cpp  EthosNReplaceUnsupportedTests.cpp  EthosNReplacementTests.cpp  EthosNSupportTest.cpp  EthosNTensorUtilsTests.cpp  EthosNTestUtils.hpp  EthosNWorkloadFactoryHelper.hpp  PreCompiledTestImpl.cpp  PreCompiledTestImpl.hpp
armnn-ethos-n-backend/test/mapping-tests/: inActivationBoundedReLu_outActivationReLu.txt  inActivationBoundedReLu_outActivationSigmoid.txt  inActivationBoundedReLu_outActivationTanh.txt  inActivationBoundedReLu_outConvolution2d.txt  inActivationBoundedReLu_outDepthwiseConvolution2d.txt  inActivationBoundedReLu_outFullyConnected.txt  inActivationBoundedReLu_outPooling2d.txt  inConvolution2d_outPooling2d.txt  inDepthToSpace_outTransposeConvolution2d.txt  inDepthwiseConvolution2d_outConvolution2d.txt  inFloor_outActivationReLu.txt  inL2Normalization_outDepthwiseConvolution2d.txt  inLogSoftmax_outFullyConnected.txt  inSoftmax_outActivationSigmoid.txt  multiLayerMapping.txt  wrongReplacementMapping.txt  wrongSourceMapping.txt  wrongSyntaxAdditionalParams.txt  wrongSyntaxAdditionalParams2.txt  wrongSyntaxAdditionalParams3.txt  wrongSyntaxTooManyParams.txt
armnn-ethos-n-backend/test/replacement-tests/: IReplacementTestGraphFactory.hpp  SISOCatOneGraphFactory.cpp  SISOCatOneGraphFactory.hpp  SISOCatOneMapping.txt
armnn-ethos-n-backend/workloads/: CMakeLists.txt  EthosNPreCompiledWorkload.cpp  EthosNPreCompiledWorkload.hpp
driver/: LICENSE  SConstruct
driver/driver_library/: SConscript
driver/driver_library/src/: Buffer.cpp  Device.cpp  DumpProfiling.cpp  DumpProfiling.hpp  Inference.cpp  KmodBuffer.hpp  KmodNetwork.cpp  KmodNetwork.hpp  KmodProfiling.cpp  ModelBuffer.hpp  ModelNetwork.cpp  ModelNetwork.hpp  Network.cpp  NetworkImpl.cpp  NetworkImpl.hpp  NullKmodProfiling.cpp  ProcMemAllocator.cpp  ProfilingInternal.cpp  ProfilingInternal.hpp  Utils.cpp  Utils.hpp
driver/driver_library/tests/: BufferTests.cpp  ConfigTests.cpp  DriverLibraryKmodTests.cpp  DriverLibraryTests.cpp  ImportedBufferKmodTests.cpp  SConscript  TestUtils.hpp
driver/site_scons/: common.py
driver/support_library/: SConscript
driver/support_library/command_stream/: SConscript
driver/support_library/src/: BufferManager.cpp  BufferManager.hpp  Capabilities.hpp  CapabilitiesInternal.cpp  CapabilitiesInternal.hpp  CombinerDFS.cpp  CombinerDFS.hpp  CommandStreamGenerator.cpp  CommandStreamGenerator.hpp  CommandStreamGeneratorUtils.hpp  Compiler.cpp  Compiler.hpp  ConcatPart.cpp  ConcatPart.hpp  ConcreteOperations.cpp  ConcreteOperations.hpp  ConstantPart.cpp  ConstantPart.hpp  ConversionPass.cpp  ConversionPass.hpp  DebuggableObject.cpp  DebuggingContext.cpp  DebuggingContext.hpp  (+96 more)
driver/utils/: SConscript
firmware/: README.md
firmware/control_unit/: README.md  SConscript  cu.scatter  cu_linker_script  pack_binaries.py
firmware/include/: scylla_addr_fields.h  scylla_addr_fields_public.h  scylla_regs.h  scylla_regs_name_map.h  scylla_regs_public.h  scylla_regs_strings.h
firmware/ple/: Boot.cpp  SConscript  ple.scatter  ple_linker_script
kernel-module/: .editorconfig  .gitignore  Kbuild  ethosn_asset_allocator.c  ethosn_asset_allocator.h  ethosn_backport.c  ethosn_backport.h  ethosn_buffer.c  ethosn_buffer.h  ethosn_core.c  ethosn_core.h  ethosn_debug.c  ethosn_debug.h  ethosn_device.c  ethosn_device.h  ethosn_dma.c  ethosn_dma.h  ethosn_dma_carveout.c  ethosn_dma_carveout.h  ethosn_dma_iommu.c  ethosn_dma_iommu.h  ethosn_driver.c  ethosn_firmware.h  ethosn_log.c  ethosn_log.h  ethosn_network.c  ethosn_network.h  ethosn_proc_mem_allocator.c  ethosn_proc_mem_allocator.h  ethosn_smc.c  ethosn_smc.h  ethosn_sub_allocator.c  juno-r2-ethosn-dual-core.dts  juno-r2-ethosn-single-smmu-dual-core.dts  juno-r2-ethosn-smmu-dual-core.dts  juno-r2-ethosn-smmu-dual-device.dts  juno-r2-ethosn-smmu.dts  juno-r2-ethosn-tzmp1.dts  juno-r2-ethosn-tzmp1.dtsi  juno-r2-ethosn.dts  (+4 more)
kernel-module/uapi/: ethosn.h  ethosn_shared.h
tools/: README.md
tools/system_tests/: ArmnnParseRunner.cpp  ArmnnParseRunner.hpp  ArmnnUtils.cpp  ArmnnUtils.hpp  Concatenation.cpp  Convolution.cpp  CustomAllocator.cpp  EthosNParseRunner.cpp  EthosNParseRunner.hpp  GgfEstimator.cpp  GgfParser.cpp  GgfParser.hpp  GgfRunner.cpp  GgfRunner.hpp  GlobalParameters.cpp  GlobalParameters.hpp  LayerData.cpp  LayerData.hpp  Miscellaneous.cpp  MultipleInferences.cpp  PleOnly.cpp  ProtectedAllocator.cpp  ProtectedAllocator.hpp  ProtectedCustomAllocatorTest.cpp  Requantize.cpp  SConscript  SystemTestsUtils.cpp  SystemTestsUtils.hpp  Tensor.cpp  Tensor.hpp  TfLiteRunner.cpp  TransposeConv.cpp  ZeroCopy.cpp  main.cpp
tools/visualizers/: extract_operation_perf.py  pretty_print_nhwcb.py
tools/visualizers/hexfile_tools/: README.md  setup.cfg  setup.py
tools/visualizers/hexfile_tools/hextools/: compare_dumps.py  extract_offsets.py  plot_dumps.py
(+411 files in other folders)
