[metadata]
name = hextools
version = 0.0.1
description = A utility for performing analysis on hexfile dumps.
long_description = file: README.md
license = Arm 2021
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:

[options.entry_points]
console_scripts =
    plot-dumps = hextools.plot_dumps:cli
    compare-dumps = hextools.compare_dumps:cli
npu_devil_plugin =
    plot-dumps = hextools.plot_dumps:cli
    compare-dumps = hextools.compare_dumps:cli

[pycodestyle]
max-line-length = 120
statistics = True